--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -36,8 +36,8 @@ body {
 button {
   background: white;
   border: 1px solid #eee;
-  margin: auto;
+  margin: 0 auto;
   display: block;
-  
+  padding: 8px 24px;
   
 }
