--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,8 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  padding: 20px;
 }
 
 .logo {
@@ -9,11 +11,16 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  gap: 20px;
+  
 }
 
 a {
