--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,4 +1,4 @@
-body {
+**body {
   font-family: 'Courier New', Courier, monospace;
 }
 
@@ -23,4 +23,8 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.plants {
+  
 }
