--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,4 +1,4 @@
-**body {
+body {
   font-family: 'Courier New', Courier, monospace;
 }
 
@@ -10,6 +10,9 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  margin: 32px;
 }
 
 /* do not edit this footer */
@@ -24,7 +27,17 @@ img {
   justify-content: center;
   background: #eee;
 }
-
-.plants {
-  
+.plants-container{
+  display: flex;
+  justify-content: center;
+  text-wrap: wrap;
+}
+.plant {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
+  text-align: center;
+  text-wrap: wrap;
+  gap: 52px;
 }
