--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -2,7 +2,8 @@
   font-family: monospace;
   background: papayawhip;
   display: flex;
-  padding: 20px;
+  padding: 8px;
+  justify-content: space-between;
 }
 
 .logo {
@@ -11,15 +12,16 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
-  margin-right: auto;
-  margin-left: auto;
+
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;
-  gap: 20px;
+  margin: 0;
+  padding: 0;
+  gap: 8px;
   
 }
 
