--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,12 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  padding: 8px;
+  
+  
+  
+  
 }
 
 .profile-image {
@@ -20,6 +26,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  
 }
 
 .logo {
@@ -27,6 +34,20 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  
+
+}
+.left-container{
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.right-container {
+  display: flex;
+  margin-left: auto;
+  align-items: center;
+  gap: 10px;
+  
 }
 
 button {
@@ -45,4 +66,8 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
 }
