--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,19 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 16px;
+}
+
+.container {
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+align-items: center;
+margin-left: 20px;
+gap: 10px 5px;
+
+
 }
 
 .icon {
@@ -31,8 +44,11 @@ body {
   height: 42px;
   border-radius: 50%;
   display: flex;
+  flex-shrink: 0;
   align-items: center;
   justify-content: center;
+  
+  
 }
 
 .close-button {
@@ -48,12 +64,14 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  margin-left: auto;
 }
 
 button {
   cursor: pointer;
   padding: 8px 16px;
   border-radius: 8px;
+  margin-top: 5px;
 }
 
 button.continue {
